--- a/.reduxrc
+++ b/.reduxrc
@@ -1,7 +1,7 @@
 {
-  "sourceBase": "src",
+  "sourceBase": "src/scripts",
   "testBase": "tests",
-  "smartPath": "containers",
+  "smartPath": "redux",
   "dumbPath": "components",
   "fileCasing": "default"
 }
