--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "def dbl project dev",
-    "push":"def dbl project publish && git add . && git commit -m'update' && git push origin daily/0.0.1 "
+    "push": "def dbl project publish && git add . && git commit -m'update' && git push origin daily/0.0.1 "
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "@ali/dblx": "0.0.29",
+    "@fdaciuk/ajax": "^2.1.2",
     "babel-polyfill": "^6.9.0",
     "extract-text-webpack-plugin": "^1.0.0",
     "file-loader": "^0.9.0",
