--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "^3.0.0"
   },
   "scripts": {
-    "dev": "def dbl project dev",
+    "dev": "def dbl project dev  -p 3005 -m 8005",
     "push": "def dbl project publish && git add . && git commit -m'update' && git push origin daily/0.0.1 "
   },
   "repository": {
