--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "node dev.js",
+    "dev2": "webpack-dev-server",
     "pub": "NODE_ENV=production webpack && git add . && git commit -m':grin:发布新功能' && git push origin master",
     "win:pub": "set NODE_ENV=production webpack && git add . && git commit -m':grin:发布新功能' && git push origin master"
   },
@@ -17,14 +18,7 @@
   "dependencies": {
     "antd": "^2.4.3",
     "babel-polyfill": "^6.9.0",
-    "file-loader": "^0.9.0",
-    "fs-extra": "^0.30.0",
-    "history": "^2.0.0",
-    "imports-loader": "^0.6.5",
     "jquery-ajax": "^2.1.4",
-    "json-loader": "^0.5.4",
-    "normalize.css": "^4.1.1",
-    "postcss-loader": "^0.9.0",
     "react": "~15.1.0",
     "react-dom": "~15.1.0",
     "react-redux": "^4.0.0",
@@ -34,7 +28,6 @@
     "redux-thunk": "^2.0.0"
   },
   "devDependencies": {
-    "async": "^2.1.4",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
     "babel-plugin-add-module-exports": "^0.2.1",
