--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/luckyjing/react-redux-scaffold.git"
   },
   "author": "LuckyJing",
   "license": "MIT",
@@ -44,8 +44,9 @@
     "html-webpack-plugin": "^2.24.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
-    "mock2easynew": "^0.0.3",
+    "mock2easy-middleware": "^0.0.2",
     "redbox-react": "^1.3.0",
+    "redux-cli": "^1.8.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4",
